# Agentes-EDA

./: README.md
eda-agents/: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
eda-agents/.claude/: settings.json
eda-agents/.claude/agents/: data-engineer.md  data-steward.md  ml-strategist.md  research-lead.md  statistician.md  technical-writer.md  ts-analyst.md  viz-designer.md
eda-agents/.claude/commands/: generate-report.md  run-agent.md  run-eda.md  validate-state.md
eda-agents/.claude/hooks/: check-encoding.sh  validate-state.sh
eda-agents/.claude/rules/: code-style.md  state-conventions.md  testing.md
eda-agents/.claude/skills/encoding/: SKILL.md
eda-agents/.claude/skills/report-generation/: SKILL.md
eda-agents/config/: pipeline.yaml
eda-agents/src/: __init__.py  graph.py  state.py
eda-agents/src/agents/: __init__.py  agent_01_research_lead.py  agent_02_data_steward.py  agent_03_data_engineer.py  agent_04_statistician.py  agent_05_ts_analyst.py  agent_06_ml_strategist.py  agent_07_viz_designer.py  agent_08_technical_writer.py
eda-agents/src/skills/: __init__.py  encoding.py  feature_importance.py  html_report.py  notebook_builder.py  report_builder.py  statistical_tests.py  timeseries.py
eda-agents/src/utils/: __init__.py  config.py  llm.py  logger.py  sanitize.py  state_validator.py  tavily_client.py
eda-agents/tests/: conftest.py  test_agents.py  test_config.py  test_graph.py  test_llm.py  test_logger.py  test_main.py  test_phases_bcde.py  test_skills.py  test_state.py  test_validator.py
eda-agents/tests/agents/: __init__.py
eda-agents/tests/fixtures/: sample_100.csv
(+2 files in other folders)
